fix: correct the spacing on the hover state in the main nav menu

--- a/_sass/components/main-nav.scss
+++ b/_sass/components/main-nav.scss
@@ -23,6 +23,16 @@
 
   &-item {
     padding: 0.5rem 1rem;
+
+    &:hover {
+      background-color: $greyLightest;
+      margin-top: -0.3rem;
+      padding-top: 0.8rem;
+
+      &:first-of-type {
+        margin-top: 0;
+      }
+    }
   }
 
   &-item,
@@ -37,10 +47,6 @@
         color: $blueDark;
         font-weight: 700;
       }
-    }
-
-    &:hover {
-      background-color: $greyLightest;
     }
 
     @media screen and (min-width: $tablet) {
